--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -10,7 +10,7 @@ body {
 
 .header{
     display: flex;
-    justify-content:space-evenly;
+    justify-content:space-between;
     align-items: center;
     padding-left: 5%;
     padding-right: 5%;
@@ -28,7 +28,7 @@ body {
     align-items: center;
     padding-top: 15px;
     padding-bottom: 15px;
-    background-color: cornflowerblue;
+    background-color:cornflowerblue;
     font-size: 2mm;
     color: #F5F6FA;
 } 
@@ -39,7 +39,7 @@ body {
     background-color: #F5F6FA;
     
 }
-.choosebox {
+.choosebody{
     padding-top: 25px;
     padding-left: 30%;
     text-transform: uppercase;
@@ -53,35 +53,7 @@ body {
     flex-wrap: wrap;
     background-color: #F5F6FA;
 }
-.Box1
-{
-    margin: 5% 0px;
-    width: 150px;
-    height: 150px;
-    border: 1px solid #FFFFFF;
-    display: flex;
-    flex-direction:column;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
-    border-radius: 7px;
-    background-color: white;
-}
-.Box2
-{
-    margin: 5% 0px;
-    width: 150px;
-    height: 150px;
-    border: 1px solid #FFFFFF;
-    display: flex;
-    flex-direction:column;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
-    border-radius: 7px;
-    background-color: white;
-}
- .Box3
+.Box1, .Box2, .Box3
 {
     margin: 5% 0px;
     width: 150px;
@@ -151,13 +123,11 @@ body {
     color: #7224FF;
 }
 
-
 .form{
     
     margin-top: 3%;
     display: flex;
     justify-content: center;
-    
 }
 .from{
     
@@ -166,7 +136,7 @@ body {
 }
 .to{
    
-    text-transform: capitalize;
+    text-transform:capitalize;
     margin-left: 20px;
 }
 #select1,#select2,input,result{
@@ -178,8 +148,7 @@ body {
     font-weight: bold; 
 }
 
-
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 400px) {
     .form{
         flex-direction: column;
         align-items: center;
@@ -193,17 +162,19 @@ body {
         margin-left: 0px;
 } 
    #welcome {
-       text-transform: capitalize;
-       font-size: 33px;
-       background-color: cornflowerblue;
-       text-align: center;
-       display: flex;
-       flex-direction: row;
-       justify-content: center;
-       align-items: center;
-       padding-top: 15px;
-       padding-bottom: 15px;
-       color: #F5F6FA;
+    text-transform: capitalize;
+    font-size: 33px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    background-color: cornflowerblue;
+    font-size: 2mm;
+    color: #F5F6FA;
+    text-align: center;
    }
    .choosebody {
        padding-top: 25px;
@@ -211,5 +182,6 @@ body {
        text-transform: uppercase;
        font-weight: bold;
    }
+   
    
 }
